--- a/src/css/blocks/card/__delete-button/card__delete-button.css
+++ b/src/css/blocks/card/__delete-button/card__delete-button.css
@@ -1,11 +1,14 @@
-.card__like-button {
-  width: 21px;
+.card__delete-button {
+  width: 18px;
   height: 18px;
-  background: transparent url('../../../images/like-inactive.svg') no-repeat;
+  background: transparent url('../../../../images/delete-icon.svg') center no-repeat;
   /*Потом это будет из модификатора*/
-  background-size: 21px 18px;
+  background-size: 18px 18px;
   border: none;
   cursor: pointer;
+  position: absolute;
+  top: 18px;
+  right: 15px;
   padding: 0;
   margin: 0;
   -webkit-transition: 0.3s;
@@ -15,6 +18,6 @@
   transition: 0.3s;
 }
 
-.card__like-button:hover {
+.card__delete-button:hover {
   opacity: 0.6;
 }
