--- a/src/css/blocks/popup/__input/popup__input.css
+++ b/src/css/blocks/popup/__input/popup__input.css
@@ -6,7 +6,7 @@
   line-height: 18px;
   box-sizing: border-box;
   margin-bottom: 10px;
-  padding: 0 0 13px;
+  padding: 5px;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
